Build the seed images through qits-buildkitd, not a buildx builder
Every image this run builds now goes to one BuildKit container instead of
to a buildx builder on the host daemon. The first build ensures
qits-buildkitd — moby/buildkit:v0.33.0, privileged, host network, restart
unless-stopped, oom-score-adj 500, the 9g/4cpu bounds the driver-opts used
to carry, and the named volume qits-buildkitd-state — and the run leaves it
standing at the end. From its first deployment on, qits-containers owns that
same container, so tearing it down here would throw away the build cache the
platform is about to want.

The host has no buildctl and does not get one: the client is the same pinned
image with its entrypoint replaced, run with the context, the Dockerfile
directory, an output directory and a secrets directory mounted. The image
comes back as a tar that docker load puts in the host daemon's store under
the same tag as before, which is what replaces buildx's --load and is why
the docker tag after a step image, the docker create of the ci-daemon build
and stack deploy --resolve-image never are all untouched.

Three things had to change shape with it:

  - buildctl has no `-f -`, so the seed builds write their rewritten
    Dockerfile to a scratch directory instead of feeding it on stdin. The
    rewrite itself is unchanged and the checkout is still untouched.
  - the step images call a method that names the Dockerfile and the context
    rather than handing over a free argv with `-f <path>` in it, because
    buildctl takes the two apart.
  - a build secret is a file. The client is a container and inherits none of
    this process's environment, so `--secret id=…,env=VAR` cannot work: each
    value is written 0600 into a directory mounted read-only and passed as
    src=. The values are still masked, and the Dockerfiles' own secret
    mounts did not move.

The scratch directories sit under QITS_SRC rather than under /tmp, and that
is not a preference. The buildctl client